# something-for-reddit

./: .coveragerc  .gitignore  .travis.yml  ChangeLog  ChangeLog.md  Makefile.am  README.md  app.nix  autogen.sh  configure.ac  default.nix  dev-shell.nix  fedora.spec  publish-flatpak.md  reddit-is-gtk.in  requirements.txt  something-for-reddit.spec  today.sam.reddit-is-gtk.json
data/: Makefile.am  app-menu.ui  empty-view.ui  left-header.ui  left-view-post.ui  left-view.ui  markdown-tester.ui  markdown.css  meta-toolbar-subreddit.ui  post-top-bar.ui  reddit-is-gtk.appdata.xml.in  reddit-is-gtk.desktop.in  reddit-is-gtk.gresource.xml  row-comment.ui  row-link.ui  settings-window.ui  shortcuts-window.ui  sign-in-view.ui  style.css  style.css.out  style.css.out.map  submit-window.ui  subreddit-about.ui  today.sam.reddit-is-gtk.appdata.xml  today.sam.reddit-is-gtk.appdata.xml.in  today.sam.reddit-is-gtk.desktop.in  today.sam.something-for-reddit.gschema.xml  user-about.ui  webview-toolbar.ui  welcome-window-content.ui
debian/: changelog  control  copyright  rules
fedora/: fedora.spec
po/: POTFILES  POTFILES.in
redditisgtk/: Makefile.am  __init__.py  aboutrow.py  api.py  buttons.py  comments.py  conftest.py  emptyview.py  gtktestutil.py  gtkutil.py  identity.py  identitybutton.py  main.py  mediapreview.py  newmarkdown.py  posttopbar.py  readcontroller.py  subentry.py  sublist.py  sublistrows.py  submit.py  test_aboutrow.py  test_api.py  test_comments.py  test_emptyview.py  test_gtkutil.py  test_identity.py  test_identitybutton.py  test_markdownpango.py  test_newmarkdown.py  test_posttopbar.py  test_readcontroller.py  test_subentry.py  test_sublist.py  test_sublistrows.py  test_submit.py  webviews.py
redditisgtk/tests-data/: api__load-more.json  comments--thread.json  identity--load.json  posttopbar--comment.json  posttopbar--post.json  sublist--pm.json  sublistrows--thumb-from-previews.json  submit--good-response.json  submit--ratelimit-response.json
redditisgtk/tests-data/snapshots/: newmarkdown--code.json  newmarkdown--error-handler.json  newmarkdown--escaping-amp.json  newmarkdown--escaping-code.json  newmarkdown--escaping.json  newmarkdown--heading.json  newmarkdown--hello.json  newmarkdown--hr.json  newmarkdown--inline.json  newmarkdown--link--r.json  newmarkdown--list.json  newmarkdown--quote.json  newmarkdown--super-long.json  newmarkdown--super.json
src/: Makefile.am  account.vala  api.py  app-view-manager.vala  application-model.vala  buttons.py  comments.py  identity.py  infopopover.py  left-header.vala  left-view.vala  listing.vala  main.py  markdownpango.py  mediapreview.py  meta-model.vala  palettebutton.py  readcontroller.py  reddit-markdown.vala  settings.py  sign-in-view.vala  snudown.h  snudown.vapi  something-for-reddit-markdown-tester.vala  something-for-reddit.vala  subentry.py  sublist.py  submit.py  webviews.py
