appdir = $(pythondir)/redditisgtk

app_PYTHON = \
	api.py \
	comments.py \
	webviews.py \
	identity.py \
	identitybutton.py \
	__init__.py \
	main.py \
	Makefile \
	Makefile.am \
	Makefile.in \
	palettebutton.py \
	buttons.py \
	markdownpango.py \
	mediapreview.py \
	readcontroller.py \
	subentry.py \
	sublist.py \
	settings.py \
	submit.py
