appdir = $(pythondir)/redditisgtk

app_PYTHON = \
	Makefile \
	Makefile.am \
	Makefile.in \
	__init__.py \
	aboutrow.py \
	api.py \
	buttons.py \
	comments.py \
	emptyview.py \
	gtkutil.py \
	identity.py \
	identitybutton.py \
	main.py \
	markdownpango.py \
	mediapreview.py \
	palettebutton.py \
	readcontroller.py \
	settings.py \
	subentry.py \
	sublist.py \
	submit.py \
	webviews.py
