appdir = $(pythondir)/redditisgtk

app_PYTHON = \
	Makefile \
	Makefile.am \
	Makefile.in \
	__init__.py \
	aboutrow.py \
	api.py \
	buttons.py \
	comments.py \
	emptyview.py \
	gtkutil.py \
	identity.py \
	identitybutton.py \
	main.py \
	mediapreview.py \
	newmarkdown.py \
	palettebutton.py \
	posttopbar.py \
	readcontroller.py \
	settings.py \
	subentry.py \
	sublist.py \
	sublistrows.py \
	submit.py \
	webviews.py
